# finmate.dev

./: .dockerignore  .env  .env.example  .gitignore  API_CONNECTION_FIX.md  CLAUDE.md  FRONTEND_UPGRADE_SUMMARY.md  FUNDS_SCRAPER.md  LOGGING_FIXES.md  PROJECT_AUDIT.md  README.md  docker-compose.yml  logs.txt  package.json  paper.tex  pnpm-lock.yaml  query-pending.mjs  render.yaml  turbo.json  vercel.json
.claude/: settings.json
apps/fundlens-scraper/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/fundlens-scraper/alembic/: env.py
apps/fundlens-scraper/alembic/versions/: 0001_initial_schema.py  0002_roles.py  0003_seed_top5_amcs.py
apps/fundlens-scraper/src/fundlens_scraper/: __init__.py  celery_app.py  cli.py  db.py  diff_engine.py  http_client.py  jobs.py  logging_config.py  main.py  models.py  persistence.py  settings.py
apps/fundlens-scraper/src/fundlens_scraper/amfi/: nav_fetcher.py  nav_parser.py
apps/fundlens-scraper/src/fundlens_scraper/isin/: nse_master.py  resolver.py
apps/fundlens-scraper/src/fundlens_scraper/parsers/: header_detector.py  normalizer.py  pdf_extractor.py
apps/fundlens-scraper/src/fundlens_scraper/scrapers/: base.py  ppfas.py  registry.py
apps/fundlens-scraper/tests/: conftest.py  test_cli.py  test_diff_engine.py  test_header_detector.py  test_http_client.py  test_nav_parser.py  test_normalizer.py  test_nse_master.py  test_pdf_extractor.py  test_persistence.py  test_ppfas_scraper.py  test_registry.py  test_smoke.py
apps/fundlens-scraper/tests/fixtures/: README.md  equity_l_sample.csv  navall_sample.txt
(+291 files in other folders)
