[project]
name = "fundlens-scraper"
version = "0.0.1"
description = "FundLens scraper — ingests Indian mutual fund disclosures into Postgres"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.0",
  "apscheduler>=3.10.4",
  "celery[redis]>=5.4.0",
  "httpx>=0.27.0",
  "tenacity>=8.5.0",
  "pdfplumber>=0.11.0",
  "openpyxl>=3.1.5",
  "pandas>=2.2.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "psycopg[binary]>=3.2.0",
  "redis>=5.0.0",
  "structlog>=24.4.0",
  "typer>=0.12.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "testcontainers[postgres]>=4.7.0",
]

[project.scripts]
fundlens-scraper = "fundlens_scraper.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fundlens_scraper"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
